@@ -17,14 +17,13 @@
 package io.jmix.dynattrflowui.impl.factory;
 
 import com.google.common.base.Strings;
-import com.google.common.collect.ImmutableMap;
 import com.vaadin.flow.component.AbstractField;
 import com.vaadin.flow.component.Component;
 import com.vaadin.flow.component.combobox.ComboBox;
-import com.vaadin.flow.component.datepicker.DatePicker;
 import io.jmix.core.JmixOrder;
 import io.jmix.core.Messages;
 import io.jmix.core.Metadata;
+import io.jmix.core.metamodel.datatype.DatatypeRegistry;
 import io.jmix.core.metamodel.datatype.FormatStringsRegistry;
 import io.jmix.core.metamodel.model.MetaClass;
 import io.jmix.core.metamodel.model.Range;
@@ -38,19 +37,17 @@ import io.jmix.dynattrflowui.impl.AttributeValidators;
 import io.jmix.flowui.Actions;
 import io.jmix.flowui.UiComponents;
 import io.jmix.flowui.action.entitypicker.EntityLookupAction;
+import io.jmix.flowui.action.valuepicker.DateIntervalAction;
 import io.jmix.flowui.action.valuepicker.ValueClearAction;
-import io.jmix.flowui.component.*;
-import io.jmix.flowui.component.combobox.EntityComboBox;
+import io.jmix.flowui.component.ComponentGenerationContext;
+import io.jmix.flowui.component.EntityPickerComponent;
+import io.jmix.flowui.component.SupportsTypedValue;
 import io.jmix.flowui.component.combobox.JmixComboBox;
-import io.jmix.flowui.component.datepicker.TypedDatePicker;
 import io.jmix.flowui.component.datetimepicker.TypedDateTimePicker;
 import io.jmix.flowui.component.factory.PropertyFilterComponentGenerationContext;
 import io.jmix.flowui.component.propertyfilter.PropertyFilter;
-import io.jmix.flowui.component.valuepicker.EntityPicker;
-import io.jmix.flowui.data.HasType;
+import io.jmix.flowui.component.valuepicker.JmixValuePicker;
 import io.jmix.flowui.kit.component.ComponentUtils;
-import io.jmix.flowui.kit.component.valuepicker.ValuePicker;
-import io.jmix.flowui.view.OpenMode;
 import io.jmix.flowui.view.ViewRegistry;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -58,6 +55,7 @@ import org.springframework.context.ApplicationContext;
 import org.springframework.util.Assert;
 
 import java.util.List;
+import java.util.Map;
 
 import static io.jmix.dynattr.AttributeType.ENTITY;
 
@@ -80,9 +78,11 @@ public class DynAttrPropertyFilterComponentGenerationStrategy extends DynAttrCom
                                                             Actions actions,
                                                             AttributeDependencies attributeDependencies,
                                                             FormatStringsRegistry formatStringsRegistry,
-                                                            ApplicationContext applicationContext) {
+                                                            ApplicationContext applicationContext,
+                                                            DatatypeRegistry datatypeRegistry) {
         super(messages, uiComponents, dynamicModelMetadata, metadata, msgBundleTools, optionsLoader,
-                attributeValidators, viewRegistry, actions, attributeDependencies, formatStringsRegistry, applicationContext);
+                attributeValidators, viewRegistry, actions, attributeDependencies,
+                formatStringsRegistry, applicationContext, datatypeRegistry);
     }
 
 
@@ -119,7 +119,7 @@ public class DynAttrPropertyFilterComponentGenerationStrategy extends DynAttrCom
         } else if (attribute.isCollection() || type == PropertyFilter.Operation.Type.LIST) {
             resultComponent = createCollectionField(context, attribute);
         } else if (attribute.getDataType() == ENTITY) {
-            resultComponent = createClassField(context, attribute);
+            resultComponent = createEntityField(context, attribute);
         } else if (type == PropertyFilter.Operation.Type.INTERVAL) {
             resultComponent = createIntervalField(context);
         } else {
@@ -137,7 +137,7 @@ public class DynAttrPropertyFilterComponentGenerationStrategy extends DynAttrCom
     protected AbstractField<?, ?> createUnaryField(@SuppressWarnings("unused") ComponentGenerationContext context) {
         //noinspection unchecked
         JmixComboBox<Boolean> component = uiComponents.create(JmixComboBox.class);
-        ComponentUtils.setItemsMap(component, ImmutableMap.of(
+        ComponentUtils.setItemsMap(component, Map.of(
                 Boolean.TRUE, messages.getMessage("boolean.yes"),
                 Boolean.FALSE, messages.getMessage("boolean.no")
         ));
@@ -176,8 +176,8 @@ public class DynAttrPropertyFilterComponentGenerationStrategy extends DynAttrCom
     }
 
     protected AbstractField<?, ?> createIntervalField(@SuppressWarnings("unused") ComponentGenerationContext context) {
-        ValuePicker<?> valuePicker = uiComponents.create(ValuePicker.class);
-//        valuePicker.addAction(applicationContext.getBean(DateIntervalAction.class));
+        JmixValuePicker<?> valuePicker = uiComponents.create(JmixValuePicker.class);
+        valuePicker.addAction(actions.create(DateIntervalAction.ID));
         valuePicker.addAction(actions.create(ValueClearAction.ID));
         return valuePicker;
     }
